# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = channels_simplify
version = file: VERSION
author = Aleskandr Sokolov
author_email = bigpewm@gmail.com
url = https://github.com/bigpe/channels-simplify
description = Django Channels - Websocket simplify tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = channels, django, websocket, ws, consumer, broadcast, simplify
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.5.2
setup_requires =
    setuptools
    wheel
package_dir =
    channels_simplify=src/channels_simplify
packages =
    channels_simplify

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

